--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 <a href="https://www.linkedin.com/school/powercoders/" target="_blank" class="fa fa-linkedin">linkedin</a>
                 <a href="https://www.facebook.com/PowercodersHQ/" target="_blank" class="fa fa-facebook">Facebook</a>
                 <a href="https://twitter.com/PowerCodersHQ" target="_blank" class="fa fa-twitter">Twitter</a>
+                <a href="https://medahad.github.io" target="_blank">More of me</a>
             </li>
           </div>
         </div>
