--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section id="about-me">
     <h2>About Me</h2>
     <img src="https://img.freepik.com/premium-vector/man-working-laptop-work-home-concept-design-freelance-man-working-laptop-smiling-man-is-sitting-with-laptop-around-internet-email-message-icons-freelancer-programmer-with-laptop_419010-12.jpg" class="about-me-img" alt="" id="image">
-    <p>Information about yourself and your background as a software engineer.</p>
+    <p>A Software Engineer with over 5 years of professional experience collaborating with cross-functional teams to design, develop, test, and implement high-quality applications across the globe. Skilled in using technologies such as Java, Python, Django, Node, Express, React, Vue, Microservices, Docker, Kubernetes, Git, AWS, and Agile/Scrum. Very passionate engineer with a curious and focused mindset keen to quickly learn new skills as well as solve complex problems.</p>
   </section>
 
   <section id="projects">
@@ -136,7 +136,7 @@
   <footer>
     <p>Copyright © 2023 Medhane Hadush</p>
   </footer>
-  
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
