--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section id="about-me">
     <h2>About Me</h2>
     <img src="https://img.freepik.com/premium-vector/man-working-laptop-work-home-concept-design-freelance-man-working-laptop-smiling-man-is-sitting-with-laptop-around-internet-email-message-icons-freelancer-programmer-with-laptop_419010-12.jpg" class="about-me-img" alt="" id="image">
-    <p>A Software Engineer with over 5 years of professional experience collaborating with cross-functional teams to design, develop, test, and implement high-quality applications across the globe. Skilled in using technologies such as Java, Python, Django, Node, Express, React, Vue, Microservices, Docker, Kubernetes, Git, AWS, and Agile/Scrum. Very passionate engineer with a curious and focused mindset keen to quickly learn new skills as well as solve complex problems.</p>
+    <p class="about-me-text">A Software Engineer with over 5 years of professional experience collaborating with cross-functional teams to design, develop, test, and implement high-quality applications across the globe. Skilled in using technologies such as Java, Python, Django, Node, Express, React, Vue, Microservices, Docker, Kubernetes, Git, AWS, and Agile/Scrum. Very passionate engineer with a curious and focused mindset keen to quickly learn new skills as well as solve complex problems.</p>
   </section>
 
   <section id="projects">
