--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                   <a class="nav-link" href="#contact">Contact</a>
                 </li>
               </ul>
+              <button id="night-mode-toggle">Night Mode</button>
             </div>
           </div>
         </nav>
